--- a/client/src/components/layout/Auth/SignIn/SignIn.module.scss
+++ b/client/src/components/layout/Auth/SignIn/SignIn.module.scss
@@ -1,3 +1,6 @@
+@import '../../../../sass/main';
+
+
 .form-container{
   display:flex;
   flex-direction: column;
@@ -5,18 +8,16 @@
   background-color: #36393f;
   padding:3rem;
   font-size: 2.4rem;
+  border-radius:5px;
+  box-shadow:0 2px 10px 0 rgba(0,0,0,.2);
 }
-
-.input-container{
-  padding:1rem;
-}
-
 
 .form{
   display:flex;
   flex-direction: column;
-
-
+  &__input{
+    padding:1rem;
+  }
 
   &__title{
     padding:2rem;
@@ -28,14 +29,55 @@
   }
 }
 
-.input{
-  width:100%;
-}
 
 .label{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  margin-bottom:1rem;
 }
+
+.input-container{
+  margin-bottom:1rem;
+}
+.input{
+  padding:1rem;
+  font-size: 1.6rem;
+
+  color:#fff;
+  width:100%;
+  height:4rem;
+  border-radius:5px;
+  background-color:rgba(0,0,0,0.1);
+  border:1px solid rgba(0,0,0,0.3);
+  transition:all 0.2s ease;
+
+
+  &:focus{
+    outline:none;
+    border:1px solid $color-primary;
+  }
+}
+
+
 
 .redirect{
   padding:1rem;
+}
+
+
+
+.submit-button{
+    height:3rem;
+    width:100%;
+    cursor:pointer;
+    background-color: #7289da;
+    border:none;
+    color:#fff;
+    border-radius:5px;
+        transition:all 0.2s ease;
+    &:focus{
+      outline:none;
+    }
+    &:hover{
+      background-color:$color-primary-hover;
+    }
 }
