--- a/client/src/components/layout/NavBar/NavBar.module.scss
+++ b/client/src/components/layout/NavBar/NavBar.module.scss
@@ -1,13 +1,39 @@
 .container{
   position:fixed;
+  display:grid;
+  grid-template-columns:.5fr 1fr 1fr 1fr .5fr;
+  grid-template-areas: '. icon . nav .';
+  background-color: #24292e;
+  padding:2rem 1.5rem;
   width:100%;
-}
+  font-size: 2rem;
+  color:#fff;
 
+  & a:link,
+  & a:visited{
+    text-decoration: none;
+    color:inherit;
+  }
+  & a:hover{
+    color:hsla(0,0%,100%,.75);
+  }
+}
+.active{
+  color:hsla(0,0%,100%,.75) !important;
+}
+.icon{
+  grid-area:icon;
+  font-size: 2.5rem;
+  font-weight:600;
+  letter-spacing: 2px;
+}
 .navbar{
+  grid-area:nav;
   display:flex;
   top:0;
   flex-direction: row;
   justify-content: space-around;
-  font-size: 3rem;
   list-style: none;
+  align-items: center;
+
 }
