--- a/client/src/sass/abstracts/variables.scss
+++ b/client/src/sass/abstracts/variables.scss
@@ -1,6 +1,9 @@
 $color-primary:#7289da;
 $color-primary-hover:#677bc4;
 
+$color-text:#72767d;
+
+
 $color-background-tertiary:#202225;
 $color-background-secondary:#2f3136;
 $color-background-primary:#36393f;
