--- a/client/src/components/layout/ChatRoom/ChatRoom.module.scss
+++ b/client/src/components/layout/ChatRoom/ChatRoom.module.scss
@@ -1,21 +1,25 @@
 @import '../../../sass/main';
 
 $navbar-padding:2rem;
+
 .container{
   display:grid;
   height:100vh;
   width:100%;
-  grid-template-columns:4.5% 13% 1fr 20%;
-  grid-template-rows: 8% 1fr 10%;
+  grid-template-columns: 4.5% 13% 1fr 15%;
+  grid-template-rows: 8%  1fr  10%;
   grid-template-areas:
   "navbar channel header header"
   "navbar channel chat-room member-bar"
   "navbar channel chat-bar member-bar"
 }
 .items{
-  padding:3rem;
   font-size: 3rem;
   color:#fff;
+
+  &--sub{
+    padding:$navbar-padding;
+  }
 }
 .navbar{
   display:flex;
@@ -31,24 +35,47 @@ $navbar-padding:2rem;
 
 .header{
   grid-area:header;
-  padding:2rem;
+  padding:$navbar-padding;
   background-color:$color-background-primary;
   border-bottom:1px solid $color-background-tertiary;
+  font-size: 2rem;
+  display:flex;
+  align-items: center;
 
 }
+
 .channel{
-  display:flex;
-  justify-content: space-between;
-  flex-direction: column;
+  display:grid;
+  grid-template-rows: 8%  1fr  10%;
   grid-area:channel;
   background-color:$color-background-secondary;
   border-top-left-radius: 20px;
+
+  &__title{
+    display:flex;
+    grid-row: 2 / 1;
+    border-bottom: 1px solid #202225;
+    align-items: center;
+    flex-direction: row;
+    font-size: 2rem;
+    height:100%;
+
+  }
+  &__name{
+    grid-row:2 / 3;
+  }
+
+  &__add-channel{
+    grid-row:3 / 4;
+    padding:1.5rem;
+  }
 }
 
 .chat-room{
   grid-area:chat-room;
   background-color:$color-background-primary;
   overflow-y: scroll;
+  padding:3rem;
 
 
   &::-webkit-scrollbar{
@@ -84,6 +111,7 @@ $navbar-padding:2rem;
 .member-bar{
   grid-area:member-bar;
   background-color:$color-background-secondary;
+  padding:0 2rem;
 }
 
 .test{
