--- a/client/src/sass/abstracts/variables.scss
+++ b/client/src/sass/abstracts/variables.scss
@@ -11,3 +11,7 @@ $color-background-primary:#36393f;
 $color-white:#fff;
 
 $box-shadow:0 2px 10px 0 rgba(0,0,0,.2);
+
+$push-down-padding:10rem;
+
+$max-width:1140px;
