progress on profile page, ready to change some backend code

--- a/client/src/components/layout/NavBar/NavBar.module.scss
+++ b/client/src/components/layout/NavBar/NavBar.module.scss
@@ -4,6 +4,7 @@
   grid-template-columns:.5fr 1fr 1fr 1fr .5fr;
   grid-template-areas: '. icon . nav .';
   background-color: #24292e;
+  opacity:0.8;
   padding:2rem 1.5rem;
   width:100%;
   font-size: 2rem;
