--- a/client/src/components/layout/Profile/Profile.module.scss
+++ b/client/src/components/layout/Profile/Profile.module.scss
@@ -1,30 +1,49 @@
 @import '../../../sass/main';
 .container{
   padding-top:$push-down-padding;
-  display:grid;
-  grid-template-columns: auto 2fr;
-  grid-template-areas:'avatar profile ';
-  justify-content: center;
+  display:flex;
+  flex-direction:column;
+  // grid-template-columns: auto 2fr;
+  // grid-template-areas:'avatar profile ';
+  // justify-content: center;
   max-width:$max-width;
   margin: 0 auto;
-  grid-gap:10rem;
+  border-radius:2.5px;
+  // grid-gap:10rem;
 }
 
 .avatar{
-  grid-area:avatar;
-
-
+  background-color:#17a2b8;
+  text-align: center;
+  margin-bottom: 2rem;
+  border-radius: inherit;
+  color:white;
+  padding:3rem;
   &__img{
-    display: block;
-    width:26rem;
-    background-color:#7289da;
-    margin-bottom: 2rem;
+    // display: block;
+    width:23rem;
+    border-radius: 50%;
+    margin:0 0 2rem;
+  }
+
+  &__username{
+    font-size:4.5rem;
+    font-weight:bold;
+
+    margin-bottom:2rem;
+  }
+
+
+  &__education{
+    font-size:2rem;
+    font-weight:lighter;
   }
 }
 
 .profile{
   grid-area:profile;
   width:100%;
+  border-radius: inherit;
   // align-self: center;
 
 }
