progress on refactor

--- a/client/src/components/layout/People/Members/Member/Member.module.scss
+++ b/client/src/components/layout/People/Members/Member/Member.module.scss
@@ -31,8 +31,14 @@
 .username{
   font-size: 4rem;
   font-weight:900;
-  word-wrap:break-word;
+
   padding:0 2rem;
+
+  & p{
+      font-size: 4rem;
+      text-overflow:ellipsis;
+      overflow: hidden;
+  }
 }
 
 .email{
@@ -43,7 +49,9 @@
   font-size:1.5rem;
   line-height: 2;
   color:grey;
-
+  &:last-child{
+    margin-bottom:2rem;
+  }
 }
 
 .button{
@@ -55,13 +63,11 @@
   color:white;
   width:40%;
   border-radius:10px;
-  // margin:2rem auto 0;
   align-self: center;
   transition:all 0.2s ease;
   transform:translateY(2rem);
   opacity:0;
   visibility:hidden;
-
   user-select: none;
   cursor:pointer;
 
