--- a/client/src/components/layout/Profile/Avatar/Avatar.module.scss
+++ b/client/src/components/layout/Profile/Avatar/Avatar.module.scss
@@ -30,10 +30,11 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
+
     & a{
       margin-right:2rem;
       color:inherit;
-
+      transition:all 0.2s ease;
       &:link,
       &:focus,
       &:active,
