--- a/client/src/sass/abstracts/variables.scss
+++ b/client/src/sass/abstracts/variables.scss
@@ -8,6 +8,7 @@ $color-background-tertiary:#202225;
 $color-background-secondary:#2f3136;
 $color-background-primary:#36393f;
 
+$color-profile:#17a2b8;
 $color-white:#fff;
 
 $box-shadow:0 2px 10px 0 rgba(0,0,0,.2);
