finished nav and landing and people media query

--- a/client/src/components/layout/Landing/Landing.module.scss
+++ b/client/src/components/layout/Landing/Landing.module.scss
@@ -46,16 +46,17 @@
   @include respond(laptopL){
     position:relative;
     top:-10rem;
+    
   }
 
   @include respond(tablet){
     position:static;
+    text-align: center;
     top:0;
+    width:100%;
   }
 
-  @include respond(mobileL){
-    text-align: center;
-  }
+
 
   &--big{
     font-size: 6.4rem;
