--- a/client/src/components/layout/Landing/Landing.module.scss
+++ b/client/src/components/layout/Landing/Landing.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  width:100%;
 
 }
 .container{
@@ -46,7 +46,7 @@
   @include respond(laptopL){
     position:relative;
     top:-10rem;
-    
+
   }
 
   @include respond(tablet){
