--- a/client/src/components/layout/ChatRoom/NavBar/NavItem/NavItem.module.scss
+++ b/client/src/components/layout/ChatRoom/NavBar/NavItem/NavItem.module.scss
@@ -1,17 +1,14 @@
-@import '../../../../sass/main';
+@import '../../../../../sass/main';
 
 $transition:all 0.2s ease;
-.container-2{
-  display: flex;
-  flex-direction:column;
-  align-items: center;
-}
+
+
 .container{
   position:relative;
   display: flex;
-  justify-content: center;
-  width:100%;
   margin-bottom: 2rem;
+  width:100%;
+  justify-content: center;
 }
 .navbar__item{
 
@@ -53,69 +50,59 @@ $transition:all 0.2s ease;
 
 
   &:hover{
-
     border-radius: 25%;
     &::before{
       height:50%;
     }
     & .icon{
       color:$color-white;
-
     }
     & .rotate{
       transform: rotate(90deg);
     }
-    & .tool-tip::before,
-    & .tool-tip::after{
-        opacity:1;
+    & + .tool-tip > .tool-tip--inner{
+          opacity:1;
+    }
+    & + .tool-tip::after{
+
+      border-color:transparent black transparent transparent;
     }
   }
 }
 
 .tool-tip{
-
-  &::before{
-    content:"";
-    position:absolute;
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  left:100%;
+  &--inner{
+    position:relative;
     display: flex;
     height:3rem;
     width:6rem;
     font-size: 1.2rem;
     background-color:black;
     color:$color-white;
-    top:50%;
-    left:130%;
-    transform:translate(-50%,-50%);
-
     transition:all 0.2s ease;
     justify-content: center;
     align-items: center;
     opacity:0;
     border-radius:5px;
-
   }
 
   &::after{
-    content:'';
-    position:absolute;
-    background-color: black;
-    top:50%;
-    left:92%;
-    height:1rem;
-    width:1rem;
-    transform-origin: center;
-    transform:rotate(45deg) translate(-50%,-25%);
-    opacity:0;
-    transition:all 0.2s ease;
+    content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent;
+  transition:$transition;
 
+   // border-color:transparent black transparent transparent;
   }
 
-  &--logout::before{
-    content:'Logout';
-  }
-
-  &--profile::before{
-    content:'Profile';
-  }
 
 }
