--- a/client/src/components/layout/Profile/Profile.module.scss
+++ b/client/src/components/layout/Profile/Profile.module.scss
@@ -67,6 +67,9 @@
   grid-area:profile;
   width:100%;
   border-radius: inherit;
-
+  @include respond(laptop){
+    width:95%;
+    margin:auto;
+  }
 
 }
