--- a/client/src/components/layout/Forum/Main/Post/Post.module.scss
+++ b/client/src/components/layout/Forum/Main/Post/Post.module.scss
@@ -11,8 +11,9 @@
 .creator-info-container{
   display:flex;
   margin-bottom: 1rem;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color:#72767d;
+  text-transform: uppercase;
   &__date{
     display:inline-block;
     margin-right:1rem;
