--- a/client/src/components/layout/ForumPost/Main/Article/Article.module.scss
+++ b/client/src/components/layout/ForumPost/Main/Article/Article.module.scss
@@ -1,6 +1,7 @@
 .container{
   color:#333;
   border-bottom:1px solid #e5e7e9;
+  margin-bottom: 2rem;
 }
 
 .post-info{
@@ -25,4 +26,5 @@
   font-size: 1.6rem;
   line-height: 2;
   letter-spacing: 1px;
+  white-space: pre-wrap;
 }
