--- a/client/src/components/layout/Profile/EditProfile/EditProfile.module.scss
+++ b/client/src/components/layout/Profile/EditProfile/EditProfile.module.scss
@@ -18,11 +18,17 @@
   display:flex;
   flex-direction:column;
   margin-bottom: 2rem;
+
+  &__inner{
+    display: flex;
+    align-items: flex-end;
+  }
 }
 
 .img{
   width:25rem;
-    margin-bottom: 2rem;
+  height:25rem;
+  object-fit: cover;
 }
 
 .intro{
